Some more additions.

--- a/recycling.html
+++ b/recycling.html
@@ -200,7 +200,7 @@
 <div class="dialog">
 <p class="character">JULIUS</p>
 <p class="lines">Recently I picked up a new hobby. No, it&rsquo;s not magic.</p>
-<p class="paren">(pause)</p>
+<p class="paren">(beat)</p>
 <p class="lines">But I still want to share it with you.</p>
 </div>
 <p class="action">Takes a blank piece of paper, with visible fold marks showing both sides. Starts to fold it in halves twice.</p>
@@ -234,6 +234,20 @@
 <p class="character">JULIUS</p>
 <p class="lines">That&rsquo;s the essence of my new hobby.</p>
 </div>
+</section>
+<section class="section">
+</section>
+<section class="section">
+<p class="action">Magician brings out a small jewelery box and sets it on the far left corner of the table.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">This is something for later.</p>
+<p class="paren">(sets the box)</p>
+<p class="lines">For now,</p>
+<p class="paren">(spreading a deck on the table)</p>
+<p class="lines">I would like you to pick a card that you think is worth throwing out.</p>
+</div>
+<p class="action">Alice picks seven of clubs which she proceeds to try and loose in the deck, but it always comes back to the top. Until finally - it&rsquo;s completely gone from the deck.</p>
 </section>
 <div class="menu">Aa</div>
 </section>
