A few more ideas.

--- a/recycling.html
+++ b/recycling.html
@@ -236,6 +236,16 @@
 </div>
 </section>
 <section class="section">
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">Another thing that yields to being reused is... ropes,</p>
+<p class="paren">(beat)</p>
+<p class="lines">from last night.</p>
+</div>
+<p class="action">Magician takes three different length ropes and makes them change length, merge and unmerge at whim.</p>
+</section>
+<section class="section">
+<p class="action">Spectator without any help from magician sorts splits red cards from black cards without seeing the faces.</p>
 </section>
 <section class="section">
 <p class="action">Magician brings out a small jewelery box and sets it on the far left corner of the table.</p>
