Closer script scaffolding.

--- a/recycling.html
+++ b/recycling.html
@@ -238,9 +238,7 @@
 <section class="section">
 <div class="dialog">
 <p class="character">JULIUS</p>
-<p class="lines">Another thing that yields to being reused is... ropes,</p>
-<p class="paren">(beat)</p>
-<p class="lines">from last night.</p>
+<p class="lines">Another thing that yields to being reused is... found more in some bedrooms, than others.</p>
 </div>
 <p class="action">Magician takes three different length ropes and makes them change length, merge and unmerge at whim.</p>
 </section>
@@ -248,16 +246,219 @@
 <p class="action">Spectator without any help from magician sorts splits red cards from black cards without seeing the faces.</p>
 </section>
 <section class="section">
-<p class="action">Magician brings out a small jewelery box and sets it on the far left corner of the table.</p>
+<p class="action">Magician brings out a small old-looking box and sets it at the front of the table.</p>
 <div class="dialog">
 <p class="character">JULIUS</p>
-<p class="lines">This is something for later.</p>
+<p class="lines">This is will be a surprise after my last performance.</p>
 <p class="paren">(sets the box)</p>
 <p class="lines">For now,</p>
-<p class="paren">(spreading a deck on the table)</p>
-<p class="lines">I would like you to pick a card that you think is worth throwing out.</p>
+<p class="paren">(spreading a deck face up)</p>
+<p class="lines">I would like you to pick a card that you would like to loose. Just not a picture card.</p>
 </div>
-<p class="action">Alice picks seven of clubs which she proceeds to try and loose in the deck, but it always comes back to the top. Until finally - it&rsquo;s completely gone from the deck.</p>
+<p class="action">Alice picks seven of clubs. Magician picks a sharpie out of the pocket.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">Please, write your name on the card.</p>
+</div>
+<p class="action">Alice does as told.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">Now, for the rest of the cards it is a pretty ordinary day.</p>
+<p class="paren">(beat)</p>
+<p class="lines">Except for this seven of clubs. It is special.</p>
+<p class="paren">(beat)</p>
+<p class="lines">And we are going to play a game I call: one mans trash - another mans treasure.</p>
+</div>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">This card is a treasure for you, but for me - I don&rsquo;t want it. So I&rsquo;ll loose it.</p>
+</div>
+<p class="action">Magician pushes the card into the middle of the deck.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">But you see? Hop!</p>
+<p class="paren">(hops the deck up)</p>
+<p class="lines">It is an important card. So it jumps to the top.</p>
+</div>
+<p class="action">Turns over the top card to reveal that indeed - it is the signed card.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">This happened to fast, didn&rsquo;t it!</p>
+<p class="paren">(beat)</p>
+<p class="lines">Let me do it slowly. It&rsquo;s somewhere about the middle this time.</p>
+</div>
+<p class="action">Magician slowly takes the top card and very openly pushes it in the middle of the deck.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">But this card... you like it don&rsquo;t you?</p>
+<p class="paren">(hops the wrist slowly)</p>
+<p class="lines">It cannot be, yeah?</p>
+</div>
+<p class="action">Slowly takes the top card and turns it over - it is the signed seven of clubs!</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">And yet!</p>
+<p class="paren">(shows the card)</p>
+</div>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">You know, I became a magician to find out how I do this.</p>
+</div>
+<p class="action">While audience reacts...</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">I&rsquo;ll do it one more time. Very slowly.</p>
+<p class="paren">(beat)</p>
+<p class="lines">You will get every chance to see how it is <em>NOT</em> done.</p>
+</div>
+<p class="action">Magician puts the card face up on top of the deck and turns it over with one finger.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">It&rsquo;s honest so far, right?</p>
+<p class="paren">(beat)</p>
+<p class="lines">I&rsquo;ll pull up my sleeves so nothing can happen.</p>
+</div>
+<p class="action">Pulls up sleeves and takes the top card. Riffles the deck and inserts the card somewhere in the middle, leaving it protruded. Get&rsquo;s ready to push it into the deck, when suddenly feels suspicion.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">No no. It&rsquo;s really there. Not on top yet.</p>
+</div>
+<p class="action">Takes out the card from the middle - it is the signed card.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">If was on top to begin with - it would be cheating.</p>
+<p class="paren">(beat)</p>
+<p class="lines">Anyway... into the deck!</p>
+</div>
+<p class="action">Magician again riffles the pack and inserts the card in the middle, leaving it protruding. Audience feels suspicious again...</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">No no, it&rsquo;s okay!</p>
+<p class="paren">(beat)</p>
+<p class="lines">They don&rsquo;t trust me there.</p>
+<p class="paren">(beat)</p>
+<p class="lines">I look honest don&rsquo;t I?</p>
+</div>
+<p class="action">Inserts the card face up into the pack, leaving it protruding.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">I&rsquo;ll do it this way.</p>
+<p class="paren">(pushing the card into the deck)</p>
+<p class="lines">This way you can see that all cheating is absolutely honest.</p>
+</div>
+<p class="action">Audience reacts. Magician spreads the deck to show the card face up somewhere in the middle of the pack.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">There is a small problem when the card is upside down.</p>
+</div>
+<p class="action">Someone says "What&rsquo;s that?"</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">The whole trick does not work anymore.</p>
+<p class="paren">(beat)</p>
+<p class="lines">Because to show it&rsquo;s face it needs to come to the top, like that.</p>
+</div>
+<p class="action">Shows some card (an ace of clubs) on the top of the deck face up.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">But if you cover it with the ace of club.</p>
+<p class="paren">(turns over ace of clubs)</p>
+<p class="lines">Hop!</p>
+</div>
+<p class="action">Takes the ace of clubs from the top, the card underneath is the signed card - face up.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">If you watch carefully, you see.</p>
+</div>
+<p class="action">Puts the signed card face down into the middle of the deck.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">You don&rsquo;t need to cover it at all.</p>
+</div>
+<p class="action">Puts the ace of clubs on the bottom.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">Hop!</p>
+<p class="paren">(beat)</p>
+<p class="lines">It goes back to the top like normal.</p>
+</div>
+<p class="action">Audience reacts.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">Sometimes I need people who think I cheat.</p>
+<p class="paren">(beat)</p>
+<p class="lines">Not you. Not you - other people.</p>
+<p class="paren">(beat)</p>
+<p class="lines">They think I do something very fast, they can&rsquo;t see.</p>
+</div>
+<p class="action">Magician inserts the card into the middle of the deck, leaving it protruding and showing it to the audience.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">No no! I don&rsquo;t do anything with my fingers.</p>
+<p class="paren">(beat)</p>
+<p class="lines">I will only use... my finger tips.</p>
+<p class="paren">(beat)</p>
+<p class="lines">Two fingers. Not more.</p>
+</div>
+<p class="action">Sets the deck on the table with one card protruding.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">Now... this way there is no way for me to cheat. And no. fast. movements.</p>
+<p class="paren">(pushes card into the deck with two fingers)</p>
+<p class="lines">I&rsquo;m not going too fast. Am I?</p>
+</div>
+<p class="action">Magician draws attention to the side of the deck.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">You can see it best from this side. Hop!</p>
+<p class="paren">(lifts the deck with two fingers)</p>
+<p class="lines">Did you see it happen?</p>
+</div>
+<p class="action">Someone says "No"</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">Me neither.</p>
+<p class="paren">(beat)</p>
+<p class="lines">But it&rsquo;s there!</p>
+</div>
+<p class="action">Turns over the top card - it&rsquo;s the signed seven of clubs.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">Alice, remember the name of this game?</p>
+<p class="paren">(beat)</p>
+<p class="lines">"One mans trash - another mans treasure."</p>
+</div>
+<p class="action">Alice agrees.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">All the time while we were trying to loose this card, I actually held it dear to me.</p>
+<p class="paren">(beat)</p>
+<p class="lines">It is not in the deck.</p>
+<p class="paren">(beat)</p>
+<p class="lines">I keep it separate.</p>
+<p class="paren">(beat)</p>
+<p class="lines">Folded.</p>
+<p class="paren">(beat)</p>
+<p class="lines">Here!</p>
+<p class="paren">(beat)</p>
+<p class="lines">In this little box.</p>
+</div>
+<p class="action">Magician points to the box on the table. Picks it up and opens it - there is a folded card inside. Starts to unfold it.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">What I don&rsquo;t understand.</p>
+<p class="paren">(beat)</p>
+<p class="lines">Is how you put your name.</p>
+<p class="paren">(beat)</p>
+<p class="lines">On my card.</p>
+<p class="paren">(beat)</p>
+<p class="lines">In my box!</p>
+</div>
+<p class="action">Unfolds the card to show it is Alice&rsquo;s signed card.</p>
+<div class="dialog">
+<p class="character">JULIUS</p>
+<p class="lines">I hope you enjoyed. Thank you!</p>
+</div>
 </section>
 <div class="menu">Aa</div>
 </section>
